test-pod-readonly.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-readonly
  namespace: default
spec:
  # Bu Pod, library-readonly kimligiyle calisir
  serviceAccountName: library-readonly
  containers:
    - name: pause
      image: busybox:1.36
      command: ["sh", "-c", "sleep 3600"]
